# python-mock-examples

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml
mockexamples/: baboon.py  external_api_banana.py  external_api_papaya.py  monkey.py  monkey_testable.py
tests/: test_mockexamples.py  test_monkey_patch_where_imported_from_with_local_import.py  test_monkey_patch_where_imported_to.py
tests/where_to_patch/: test_1_patch_where_imported_to.py  test_2_patch_where_imported_from_with_local_import.py  test_3_patch_where_imported_from.py  test_4_avoid_patch_and_inject_dependencies.py  test_patch_where_imported_from_with_local_import.py  test_patch_where_imported_to.py
