[tool.poetry]
name = "mockexamples"
version = "0.1.0"
description = "A collection of snippets covering common and wierd cases involving the use of mock"
authors = ["Simone Gaiarin <simgunz@gmail.com>"]
license = "MIT license"
readme = "README.md"
repository = "https://github.com/simgunz/mock-examples"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-mock = "^3.7.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
